--- a/trunk/siak/web/WEB-INF/pages/kurikulum/kurikulum/kurikulumDetail.zul
+++ b/trunk/siak/web/WEB-INF/pages/kurikulum/kurikulum/kurikulumDetail.zul
@@ -76,8 +76,61 @@
                                                     tooltiptext="Cari Prodi"/>
                                         </hbox>
                                     </row>
+                                    <row>
+                                        <hbox>
+                                            <label value="Konsentrasi"/>
+                                            <label value="*" style="color:red;font-size:10px"/>
+                                        </hbox>
+                                        <hbox pack="stretch" width="50%">
+                                            <textbox
+                                                    id="txtb_peminatan"
+                                                    value="@{controller.kurikulum.mpeminatan.cnmminat}"
+                                                    readonly="true" maxlength="50" width="99%"/>
+                                            <button
+                                                    id="btnSearchPeminatanExtended" disabled="true"
+                                                    width="28px"
+                                                    image="/images/icons/btn_search2_16x16.gif"
+                                                    tooltiptext="Cari Peminatan"/>
+                                        </hbox>
+                                    </row>
                                 </rows>
                             </grid>
+                        </groupbox>
+                        <groupbox mold="3d" closable="false" style="height:100%; ">
+                            <caption image="/images/icons/view.gif" label="Matakuliah"/>
+                            <div sclass="z-toolbar" style="padding:0">
+                                <hbox pack="stretch" sclass="hboxRemoveWhiteStrips" width="100%">
+                                    <toolbar align="start" style="float:left; border-style: none;" height="28px">
+                                        <hbox align="center" style="padding: 2px"></hbox>
+                                    </toolbar>
+                                    <toolbar align="center" style="float:left; border-style: none;" height="28px">
+                                        <hbox align="center" style="padding: 2px"></hbox>
+                                    </toolbar>
+                                    <toolbar align="end" style="float:right; border-style: none;" height="28px">
+                                        <button id="btnNewDetilKurikulum" height="24px" image="/images/icons/btn_new2_16x16.gif"/>
+                                        <button id="btnDeleteDetilKurikulum" height="24px" image="/images/icons/btn_delete2_16x16.gif"/>
+                                    </toolbar>
+                                </hbox>
+                            </div>
+                            <borderlayout id="borderDetilKurikulum" style="height:200px">
+                                <north border="none" height="26px">
+                                    <paging id="pagingDetilKurikulum" style="width:100%" pageSize="20"/>
+                                </north>
+                                <center border="none">
+                                    <listbox id="listDetilKurikulum" width="100%" height="100%" multiple="false">
+                                        <listhead sizable="true">
+                                            <!--listheader id="cno" sort="auto" width="5%" label="No"/-->
+                                            <listheader id="mtbmtkl.ckdmtk" sort="auto" width="10%" label="Kode"/>
+                                            <listheader id="mtbmtkl.cnamamk" sort="auto" width="20%" label="Nama Matakuliah"/>
+                                            <listheader id="cjenis" sort="auto" width="10%" label="Jenis"/>
+                                            <listheader id="cstatus" sort="auto" width="10%" label="Status"/>
+                                            <listheader id="cmun" sort="auto" width="10%" label="MUN"/>
+                                            <listheader id="ctermsmt" sort="auto" width="10%" label="Term"/>
+                                            <listheader id="clintasprodi" sort="auto" width="30%" label="Lintas Prodi"/>
+                                        </listhead>
+                                    </listbox>
+                                </center>
+                            </borderlayout>
                         </groupbox>
                     </panelchildren>
                 </panel>
