--- a/siak/web/WEB-INF/pages/administrasi/mahasiswa/pageKhusus.zul
+++ b/siak/web/WEB-INF/pages/administrasi/mahasiswa/pageKhusus.zul
@@ -169,11 +169,9 @@
                                         <listbox id="listRiwayatPendidikan" width="100%" height="100%" multiple="false"
                                                  style="border-top-width: 0px; border-left-width: 0px; border-right-width: 0px; border-bottom-width: 1px;">
                                             <listhead sizable="true">
-                                                <listheader id="jenis" sort="auto" width="30%"
-                                                            label="Jenis / Nama Pembentukan"/>
+                                                <listheader id="jenis" sort="auto" width="30%" label="Jenis / Nama Pembentukan"/>
                                                 <listheader id="tahun" sort="auto" width="10%" label="Tahun"/>
-                                                <listheader id="cketerangan" sort="auto" width="60%"
-                                                            label="Keterangan"/>
+                                                <listheader id="cketerangan" sort="auto" width="60%" label="Keterangan"/>
                                             </listhead>
                                         </listbox>
                                     </center>
@@ -206,13 +204,10 @@
                                     <center border="none">
                                         <listbox id="listRiwayatPangkat" width="100%" height="100%" multiple="false">
                                             <listhead sizable="true">
-                                                <listheader id="cdpangkat" sort="auto" width="15%"
-                                                            label="Kode Pangkat"/>
-                                                <listheader id="nmpangkat" sort="auto" width="25%"
-                                                            label="Nama Pangkat"/>
+                                                <listheader id="cdpangkat" sort="auto" width="15%" label="Kode Pangkat"/>
+                                                <listheader id="nmpangkat" sort="auto" width="25%" label="Nama Pangkat"/>
                                                 <listheader id="ctmt" sort="auto" width="10%" label="TMT"/>
-                                                <listheader id="dketerangan" sort="auto" width="50%"
-                                                            label="Keterangan"/>
+                                                <listheader id="dketerangan" sort="auto" width="50%" label="Keterangan"/>
                                             </listhead>
                                         </listbox>
                                     </center>
