--- a/siak/web/WEB-INF/pages/administrasi/updatestatus/pageMain.zul
+++ b/siak/web/WEB-INF/pages/administrasi/updatestatus/pageMain.zul
@@ -38,9 +38,9 @@
                 </toolbar>
 				<!-- CRUD BUTTONS -->
 				<toolbar align="end" style="float:right; border-style: none;">
-					<button id="btnNew" height="24px" tooltiptext="${c:l('btnNew.tooltiptext')}" />
+					<!--<button id="btnNew" height="24px" tooltiptext="${c:l('btnNew.tooltiptext')}" />-->
 					<button id="btnEdit" height="24px" tooltiptext="${c:l('btnEdit.tooltiptext')}" />
-					<button id="btnDelete" height="24px" tooltiptext="${c:l('btnDelete.tooltiptext')}" />
+					<!--<button id="btnDelete" height="24px" tooltiptext="${c:l('btnDelete.tooltiptext')}" />-->
 					<button id="btnSave" height="24px" tooltiptext="${c:l('btnSave.tooltiptext')}" />
 					<button id="btnCancel" height="24px" tooltiptext="${c:l('btnCancel.tooltiptext')}" />
 				</toolbar>
